--- a/medee.html
+++ b/medee.html
@@ -30,7 +30,7 @@
             <img src="burger-menu.6c31a5c9.svg">
         </a>
     </header>
-    <section>
+    <article>
         <header>
             <img src="pro.jpeg">
             <p>Номин</p>
@@ -93,7 +93,7 @@
                 <h3>мэдээ4</h3>
             </a>
         </section>
-    </section>
+    </article>
     <footer>
         <a>
             <img src="gogo-logo.345096b3.png">
