--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
 </head>
 <body>
     <header>
+        <ul>
+            <li>
+                <a href="index.html">
+                    <img src="gogo-logo.345096b3.png">
+                </a>
+            </li>
+            <li>
+                <p>цаг агаар</p>
+                <a href="medee.html">
+                 <img src="sun-icon.b61be7df.svg">
+                </a>
+                <p>15</p>
+            </li>
+            <li>
+                <p>зурхай</p>
+                 <a>
+                <img src="calendar-icon.ff84145b.svg">
+                </a>
+                 <p>10/16</p>
+            </li>
+            <li>
+                <p>зурхай</p>
+                <a>
+                    <img src="calendar-icon.b616d7e0.png">
+                </a>
+                <p>3500</p>
+            </li>
+            <li>
+                <a>
+                    <img src="burger-menu.6c31a5c9.svg">
+                </a>
+            </li>
+        </ul>
         <a href="index.html">
             <img src="gogo-logo.345096b3.png">
         </a>
