--- a/index.html
+++ b/index.html
@@ -40,72 +40,103 @@
     </header>
     <img src="-02052023-1683023747-473039241-atg.jpg">
     <section>
-        <header></header>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-        </a>
+        <header><h2>онцлох мэдээ</h2></header>
+        <ui>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                </a>
+            </li>
+        </ui>
     </section>
     <section>
         <header>
             <h2>шинэ мэдээ</h2>
         </header>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-            <img src="time-gray.9098dcef.svg">
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-            <img src="time-gray.9098dcef.svg">
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-            <img src="time-gray.9098dcef.svg">
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-            <img src="time-gray.9098dcef.svg">
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-            <img src="time-gray.9098dcef.svg">
-        </a>
-        <a href="medee.html">
-            <img src="md1.jpg" >
-            <h2></h2>
-            <img src="comment-light.bd31b019.svg">
-            <p>12</p>
-            <img src="time-gray.9098dcef.svg">
-        </a>
+        <ul>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+            <li>
+                <a href="medee.html">
+                    <img src="md1.jpg" >
+                    <h2></h2>
+                    <img src="comment-light.bd31b019.svg">
+                    <p>12</p>
+                    <img src="time-gray.9098dcef.svg">
+                </a>
+            </li>
+        </ul>
     </section>
     <footer>
             <a>
