--- a/tsag agaar.html
+++ b/tsag agaar.html
@@ -11,24 +11,32 @@
         <a href="index.html">
             <img src="gogo-logo.345096b3.png">
         </a>
-        <p>цаг агаар</p>
-        <a>
-            <img src="sun-icon.b61be7df.svg">
-        </a>
-        <p>15</p>
-        <p>зурхай</p>
-        <a>
-            <img src="calendar-icon.ff84145b.svg">
-        </a>
-        <p>10/16</p>
-        <p>зурхай</p>
-        <a>
-            <img src="calendar-icon.b616d7e0.png">
-        </a>
-        <p>3500</p>
-        <a>
-            <img src="burger-menu.6c31a5c9.svg">
-        </a>
+        <ul>>
+            <li>
+                <p>цаг агаар</p>
+                <a href="medee.html">
+                 <img src="sun-icon.b61be7df.svg">
+                </a>
+                <p>15</p>
+            </li>
+            <li>
+                <p>зурхай</p>
+                 <a>
+                <img src="calendar-icon.ff84145b.svg">
+                </a>
+                 <p>10/16</p>
+            </li>
+            <li>
+                <p>зурхай</p>
+                <a>
+                    <img src="calendar-icon.b616d7e0.png">
+                </a>
+                <p>3500</p>
+            </li>
+            <a>
+                <img src="burger-menu.6c31a5c9.svg">
+            </a>
+        </ul>
     </header>
     <section>
         aaaa
@@ -37,24 +45,38 @@
         <a>
             <img src="gogo-logo.345096b3.png">
         </a>
-        <p>Бидний тухай</p>
-        <a>
-            <img src="tech.a4b28dbb.png">
-        </a>
-        <p>репакцийн ёс зүй</p>
-        <a>
-            <img src="redakts.41ba2bab.png">
-        </a>
-        <p>Холбоо өарих</p>
-        <a>
-            <img src="holboo.99f66db8.png">
-        </a>
-        <a>
-            <img src="twitter.b8e7ff8d.svg">
-        </a>
-        <a>
-            <img src="youtube.5095f9af.svg">
-        </a>
-    </footer>
+        <ul>
+            <li>
+                <p>Бидний тухай</p>
+                <a>
+                    <img src="tech.a4b28dbb.png">
+                </a>
+            </li>
+            <li>
+                <p>репакцийн ёс зүй</p>
+                <a>
+                    <img src="redakts.41ba2bab.png">
+                </a>
+            </li>
+            <li>
+                <p>Холбоо өарих</p>
+                <a>
+                     <img src="holboo.99f66db8.png">
+                </a>
+            </li>
+        </ul>
+       <ul>
+            <li>
+                <a>
+                    <img src="twitter.b8e7ff8d.svg">
+                </a>
+            </li>
+            <li>
+                <a>
+                    <img src="youtube.5095f9af.svg">
+                </a>
+            </li>
+       </ul>
+ </footer>
 </body>
 </html>
