--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>gogo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    
 </head>
 <body>
     <header>
@@ -39,7 +38,7 @@
             </a>
         </ul>
     </header>
-    <img src="-02052023-1683023747-473039241-atg.jpg">
+    <img src="cover1.jpg">
     <section>
         <header><h2>онцлох мэдээ</h2></header>
         <ui>
