--- a/index.html
+++ b/index.html
@@ -4,6 +4,76 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>gogo</title>
+    <style>
+        header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+}
+
+header a {
+    text-decoration: none;
+    color: #fff;
+}
+
+/* Style the navigation menu */
+header ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+header li {
+    display: inline;
+    margin-right: 10px;
+}
+
+/* Apply styles to images in the header */
+header img {
+    width: 30px;
+    height: 30px;
+}
+
+/* Apply styles to the main content sections */
+section {
+    margin: 20px;
+}
+
+section h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+section ul {
+    list-style: none;
+}
+
+section li {
+    margin-bottom: 20px;
+}
+
+/* Apply styles to the footer */
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #fff;
+}
+
+footer ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer li {
+    margin: 0 10px;
+}
+    </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
