--- a/index.html
+++ b/index.html
@@ -4,76 +4,68 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>gogo</title>
-    <style>
-        header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
+   <style>
+        /* Dark mode background and text color */
+body {
+    background-color: #121212;
+    color: #ffffff;
 }
 
-header a {
-    text-decoration: none;
-    color: #fff;
-}
-
-/* Style the navigation menu */
-header ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-header li {
-    display: inline;
-    margin-right: 10px;
-}
-
-/* Apply styles to images in the header */
-header img {
-    width: 30px;
-    height: 30px;
-}
-
-/* Apply styles to the main content sections */
-section {
-    margin: 20px;
-}
-
-section h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-section ul {
-    list-style: none;
-}
-
-section li {
-    margin-bottom: 20px;
-}
-
-/* Apply styles to the footer */
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-}
-
-footer a {
-    text-decoration: none;
-    color: #fff;
-}
-
-footer ul {
-    list-style: none;
+/* Dark mode header */
+header {
     display: flex;
-    justify-content: space-between;
+    background-color: #1e1e1e;
+    color: #ffffff;
 }
 
-footer li {
-    margin: 0 10px;
+/* Dark mode navigation links */
+header a {
+    color: #ffffff;
 }
-    </style>
+
+/* Dark mode navigation links on hover */
+header a:hover {
+    color: #ff9900;
+}
+
+/* Dark mode content sections */
+section {
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
+
+/* Dark mode links */
+a {
+    color: #ff9900;
+}
+
+/* Dark mode links on hover */
+a:hover {
+    color: #ffcc00;
+}
+
+/* Dark mode footer */
+footer {
+    display: flex;
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
+
+/* Dark mode footer links */
+footer a {
+    color: #ff9900;
+}
+
+/* Dark mode footer links on hover */
+footer a:hover {
+    color: #ffcc00;
+}
+
+/* Add more specific styles as needed */
+ul{
+    display: flex;
+}
+   </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
