--- a/index.html
+++ b/index.html
@@ -6,66 +6,68 @@
     <title>gogo</title>
    <style>
         /* Dark mode background and text color */
-body {
-    background-color: #121212;
-    color: #ffffff;
-}
+    body {
+        background-color: #121212;
+        color: #ffffff;
+    }
 
 /* Dark mode header */
-header {
-    display: flex;
-    background-color: #1e1e1e;
-    color: #ffffff;
-}
+    header {
+        display: flex;
+        background-color: #1e1e1e;
+        color: #ffffff;
+    }
 
 /* Dark mode navigation links */
-header a {
-    color: #ffffff;
-}
+    header a {
+        color: #ffffff;
+    }
 
 /* Dark mode navigation links on hover */
-header a:hover {
-    color: #ff9900;
-}
-
+    header a:hover {
+        color: #ff9900;
+    }
+    header li {
+        padding-left: 25%;
+    }
 /* Dark mode content sections */
-section {
-    background-color: #1e1e1e;
-    color: #ffffff;
-}
+    section {
+        background-color: #1e1e1e;
+        color: #ffffff;
+    }
 
 /* Dark mode links */
-a {
-    color: #ff9900;
-}
+    a {
+        color: #ff9900;
+    }
 
 /* Dark mode links on hover */
-a:hover {
-    color: #ffcc00;
-}
+    a:hover {
+        color: #ffcc00;
+    }
 
 /* Dark mode footer */
-footer {
-    display: flex;
-    background-color: #1e1e1e;
-    color: #ffffff;
-}
+    footer {
+        display: flex;
+        background-color: #1e1e1e;
+        color: #ffffff;
+    }
 
 /* Dark mode footer links */
-footer a {
-    color: #ff9900;
-}
+    footer a {
+        color: #ff9900;
+    }
 
 /* Dark mode footer links on hover */
-footer a:hover {
-    color: #ffcc00;
-}
+    footer a:hover {
+        color: #ffcc00;
+    }
 
 /* Add more specific styles as needed */
-ul{
-    display: flex;
-}
-   </style>
+    ul{
+        display: flex;
+    }
+</style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
 <body>
