--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     body {
         background-color: #121212;
         color: #ffffff;
+        
     }
 
 /* Dark mode header */
@@ -66,6 +67,7 @@
 /* Add more specific styles as needed */
     ul{
         display: flex;
+        list-style-type: none;
     }
 </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
