--- a/medee.html
+++ b/medee.html
@@ -5,6 +5,72 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>gogo medee</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <style>
+        /* Dark mode background and text color */
+    body {
+        background-color: #121212;
+        color: #ffffff;
+        
+    }
+
+/* Dark mode header */
+    header {
+        display: flex;
+        background-color: #1e1e1e;
+        color: #ffffff;
+    }
+
+/* Dark mode navigation links */
+    header a {
+        color: #ffffff;
+    }
+
+/* Dark mode navigation links on hover */
+    header a:hover {
+        color: #ff9900;
+    }
+    header li {
+        padding-left: 25%;
+    }
+/* Dark mode content sections */
+    section {
+        background-color: #1e1e1e;
+        color: #ffffff;
+    }
+
+/* Dark mode links */
+    a {
+        color: #ff9900;
+    }
+
+/* Dark mode links on hover */
+    a:hover {
+        color: #ffcc00;
+    }
+
+/* Dark mode footer */
+    footer {
+        display: flex;
+        background-color: #1e1e1e;
+        color: #ffffff;
+    }
+
+/* Dark mode footer links */
+    footer a {
+        color: #ff9900;
+    }
+
+/* Dark mode footer links on hover */
+    footer a:hover {
+        color: #ffcc00;
+    }
+
+/* Add more specific styles as needed */
+    ul{
+        display: flex;
+        list-style-type: none;
+    }
+    </style>
 </head>
 <body>
 </head>
@@ -56,7 +122,7 @@
         <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>        
         <footer>
             <ul>
-                <li>
+                <li >
                     <a>
                         <img src="img-reaction-1.25af1ad6.png">
                     </a>
