--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 /* Dark mode links */
     a {
-        color: #ff9900;
+        color: #ffffff;
     }
 
 /* Dark mode links on hover */
@@ -56,7 +56,7 @@
 
 /* Dark mode footer links */
     footer a {
-        color: #ff9900;
+        color: #ffffff;
     }
 
 /* Dark mode footer links on hover */
@@ -69,6 +69,15 @@
         display: flex;
         list-style-type: none;
     }
+    .mlist{
+        padding: 20px;
+    }
+    .mqlist{
+        display: flex;
+    }
+    .mqhlist{
+        padding-left: 10px;
+    }
 </style>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
@@ -79,7 +88,7 @@
         </a>
         <ul>>
             <li>
-                <p>цаг агаар</p>
+                <p>цагагаар</p>
                 <a href="medee.html">
                  <img src="sun-icon.b61be7df.svg">
                 </a>
@@ -106,103 +115,134 @@
     </header>
     <img src="cover1.jpg">
     <section>
-        <header><h2>онцлох мэдээ</h2></header>
-        <ui>
-            <li>
-                <a href="medee.html">
-                    <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                </a>
-            </li>
-            <li>
-                <a href="medee.html">
-                    <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                </a>
-            </li>
-            <li>
-                <a href="medee.html">
-                    <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                </a>
-            </li>
-        </ui>
-    </section>
-    <section>
         <header>
             <h2>шинэ мэдээ</h2>
         </header>
         <ul>
             <li>
-                <a href="medee.html">
+                <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
+                    <h2>мэдэээ 1</h2>
+                    <div class="mqlist">
+                        <img src="comment-light.bd31b019.svg" >
+                        <p style="padding-left: 5px;">12</p>
+                    </div>
                 </a>
             </li>
             <li>
-                <a href="medee.html">
+                <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
+                    <h2>мэдэээ 1</h2>
+                    <div class="mqlist">
+                        <img src="comment-light.bd31b019.svg" >
+                        <p style="padding-left: 5px;">12</p>
+                    </div>
                 </a>
             </li>
             <li>
-                <a href="medee.html">
+                <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
+                    <h2>мэдэээ 1</h2>
+                    <div class="mqlist">
+                        <img src="comment-light.bd31b019.svg" >
+                        <p style="padding-left: 5px;">12</p>
+                    </div>
                 </a>
             </li>
             <li>
-                <a href="medee.html">
+                <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
+                    <h2>мэдэээ 1</h2>
+                    <div class="mqlist">
+                        <img src="comment-light.bd31b019.svg" >
+                        <p style="padding-left: 5px;">12</p>
+                    </div>
                 </a>
             </li>
             <li>
-                <a href="medee.html">
+                <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
+                    <h2>мэдэээ 1</h2>
+                    <div class="mqlist">
+                        <img src="comment-light.bd31b019.svg" >
+                        <p style="padding-left: 5px;">12</p>
+                    </div>
                 </a>
             </li>
             <li>
-                <a href="medee.html">
+                <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
+                    <h2>мэдэээ 1</h2>
+                    <div class="mqlist">
+                        <img src="comment-light.bd31b019.svg" >
+                        <p style="padding-left: 5px;">12</p>
+                    </div>
                 </a>
             </li>
-            <li>
-                <a href="medee.html">
-                    <img src="md1.jpg" >
-                    <h2></h2>
-                    <img src="comment-light.bd31b019.svg">
-                    <p>12</p>
-                    <img src="time-gray.9098dcef.svg">
-                </a>
             </li>
         </ul>
+    </section>
+    <section>
+        <header><h2>онцлох мэдээ</h2></header>
+        <ui>
+            <li>
+                <a href="medee.html" style="display: flex;">
+                    <img src="md1.jpg" >
+                    <div class="mlist">
+                        <h2>мэдэээ 1</h2>
+                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <div class="mqlist">
+                            <img src="comment-light.bd31b019.svg">
+                            <p style="padding-left: 5px;">12</p>
+                            <img src="time-gray.9098dcef.svg" style="padding-left: 10px;">
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="medee.html" style="display: flex;">
+                    <img src="md1.jpg" >
+                    <div class="mlist">
+                        <h2>мэдэээ 1</h2>
+                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <div class="mqlist">
+                            <img src="comment-light.bd31b019.svg">
+                            <p style="padding-left: 5px;">12</p>
+                            <img src="time-gray.9098dcef.svg" style="padding-left: 10px;">
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="medee.html" style="display: flex;">
+                    <img src="md1.jpg" >
+                    <div class="mlist">
+                        <h2>мэдэээ 1</h2>
+                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <div class="mqlist">
+                            <img src="comment-light.bd31b019.svg">
+                            <p style="padding-left: 5px;">12</p>
+                            <img src="time-gray.9098dcef.svg" style="padding-left: 10px;">
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="medee.html" style="display: flex;">
+                    <img src="md1.jpg" >
+                    <div class="mlist">
+                        <h2>мэдэээ 1</h2>
+                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <div class="mqlist">
+                            <img src="comment-light.bd31b019.svg">
+                            <p style="padding-left: 5px;">12</p>
+                            <img src="time-gray.9098dcef.svg" style="padding-left: 10px;">
+                        </div>
+                    </div>
+                </a>
+            </li>
+
+        </ui>
     </section>
     <footer>
             <a>
