--- a/medee.html
+++ b/medee.html
@@ -8,15 +8,14 @@
     <style>
         /* Dark mode background and text color */
     body {
-        background-color: #121212;
+        background-color: #000000;
         color: #ffffff;
         
     }
-
 /* Dark mode header */
     header {
         display: flex;
-        background-color: #1e1e1e;
+        background-color: #000000;
         color: #ffffff;
     }
 
@@ -34,41 +33,45 @@
     }
 /* Dark mode content sections */
     section {
-        background-color: #1e1e1e;
+        background-color: #000000;
         color: #ffffff;
     }
 
 /* Dark mode links */
-    a {
-        color: #ff9900;
-    }
-
 /* Dark mode links on hover */
     a:hover {
         color: #ffcc00;
     }
-
+   a{
+    color: #ffffff;
+   }
 /* Dark mode footer */
     footer {
         display: flex;
-        background-color: #1e1e1e;
+        background-color: #000000;
         color: #ffffff;
     }
 
 /* Dark mode footer links */
     footer a {
-        color: #ff9900;
+        color: #ffffff;
     }
 
 /* Dark mode footer links on hover */
     footer a:hover {
         color: #ffcc00;
     }
-
-/* Add more specific styles as needed */
     ul{
         display: flex;
         list-style-type: none;
+    }
+    .pro{
+        display: flex;
+        height: 10px;
+        width: 800px;
+    }
+    article div img{
+        
     }
     </style>
 </head>
@@ -79,7 +82,7 @@
         <a href="index.html">
             <img src="gogo-logo.345096b3.png">
         </a>
-        <ul>>
+        <ul>
             <li>
                 <p>цаг агаар</p>
                 <a href="medee.html">
@@ -107,16 +110,18 @@
         </ul>
     </header>
     <article>
-        <header>
+        <div class="pro">
             <img src="pro.jpeg">
-            <p>Номин</p>
-            <img src="time-gray.9098dcef.svg">
-            <p>10 минутын өмнө</p>
-            <img src="facebook.483468e9.svg">
+            <p style="padding-left: 5px; color: #ffffffb4;">Номин</p>
+            <img src="time-gray.9098dcef.svg" style="padding-left: 10px; ">
+            <p style="padding-left: 5px; color: #ffffffb4; width: 50px;">10 минутын өмнө</p>
+            <img src="facebook.483468e9.svg" style="padding-left: 750px;">
             <img src="twitter.b8e7ff8d.svg">
-             <h1>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h1>
+        </div>
+        <header>
+            <h1>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h1>
         </header>
-        <img src="md1.jpg">
+        <img src="md1.jpg" style="width: 800px;">
         <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>
         <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>
         <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>        
