--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <style>
         /* Dark mode background and text color */
     body {
-        background-color: #121212;
+        background-color: #000;
         color: #ffffff;
         
     }
@@ -15,7 +15,7 @@
 /* Dark mode header */
     header {
         display: flex;
-        background-color: #1e1e1e;
+        background-color: #000;
         color: #ffffff;
     }
 
@@ -33,7 +33,7 @@
     }
 /* Dark mode content sections */
     section {
-        background-color: #1e1e1e;
+        background-color: #000;
         color: #ffffff;
     }
 
@@ -50,7 +50,7 @@
 /* Dark mode footer */
     footer {
         display: flex;
-        background-color: #1e1e1e;
+        background-color: #000;
         color: #ffffff;
     }
 
@@ -184,7 +184,7 @@
     </section>
     <section>
         <header><h2>онцлох мэдээ</h2></header>
-        <ui>
+        <ul style="display: block;">
             <li>
                 <a href="medee.html" style="display: flex;">
                     <img src="md1.jpg" >
@@ -242,7 +242,7 @@
                 </a>
             </li>
 
-        </ui>
+        </ul>
     </section>
     <footer>
             <a>
