--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li>
                 <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2>мэдэээ 1</h2>
+                    <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
                     <div class="mqlist">
                         <img src="comment-light.bd31b019.svg" >
                         <p style="padding-left: 5px;">12</p>
@@ -132,7 +132,7 @@
             <li>
                 <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2>мэдэээ 1</h2>
+                    <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
                     <div class="mqlist">
                         <img src="comment-light.bd31b019.svg" >
                         <p style="padding-left: 5px;">12</p>
@@ -142,7 +142,7 @@
             <li>
                 <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2>мэдэээ 1</h2>
+                    <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
                     <div class="mqlist">
                         <img src="comment-light.bd31b019.svg" >
                         <p style="padding-left: 5px;">12</p>
@@ -152,7 +152,7 @@
             <li>
                 <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2>мэдэээ 1</h2>
+                    <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
                     <div class="mqlist">
                         <img src="comment-light.bd31b019.svg" >
                         <p style="padding-left: 5px;">12</p>
@@ -162,7 +162,7 @@
             <li>
                 <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2>мэдэээ 1</h2>
+                    <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
                     <div class="mqlist">
                         <img src="comment-light.bd31b019.svg" >
                         <p style="padding-left: 5px;">12</p>
@@ -172,7 +172,7 @@
             <li>
                 <a href="medee.html " class="mqhlist">
                     <img src="md1.jpg" >
-                    <h2>мэдэээ 1</h2>
+                    <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
                     <div class="mqlist">
                         <img src="comment-light.bd31b019.svg" >
                         <p style="padding-left: 5px;">12</p>
@@ -189,8 +189,8 @@
                 <a href="medee.html" style="display: flex;">
                     <img src="md1.jpg" >
                     <div class="mlist">
-                        <h2>мэдэээ 1</h2>
-                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
+                        <p>Хамас зэвсэгт байгууллага бямба гарагийн өглөө Газын зурвасаас Израилийн нутагт дэвсгэр рүү гэнэт довтоллоо. Агаар, газар,  </p>
                         <div class="mqlist">
                             <img src="comment-light.bd31b019.svg">
                             <p style="padding-left: 5px;">12</p>
@@ -203,8 +203,8 @@
                 <a href="medee.html" style="display: flex;">
                     <img src="md1.jpg" >
                     <div class="mlist">
-                        <h2>мэдэээ 1</h2>
-                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
+                        <p> Хамас зэвсэгт байгууллага бямба гарагийн өглөө Газын зурвасаас Израилийн нутагт дэвсгэр рүү гэнэт довтоллоо. Агаар, газар,  </p>
                         <div class="mqlist">
                             <img src="comment-light.bd31b019.svg">
                             <p style="padding-left: 5px;">12</p>
@@ -217,8 +217,8 @@
                 <a href="medee.html" style="display: flex;">
                     <img src="md1.jpg" >
                     <div class="mlist">
-                        <h2>мэдэээ 1</h2>
-                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
+                        <p> Хамас зэвсэгт байгууллага бямба гарагийн өглөө Газын зурвасаас Израилийн нутагт дэвсгэр рүү гэнэт довтоллоо. Агаар, газар,  </p>
                         <div class="mqlist">
                             <img src="comment-light.bd31b019.svg">
                             <p style="padding-left: 5px;">12</p>
@@ -231,8 +231,8 @@
                 <a href="medee.html" style="display: flex;">
                     <img src="md1.jpg" >
                     <div class="mlist">
-                        <h2>мэдэээ 1</h2>
-                        <p> dadadadadada dad ad adadada ad a dad ad a da da da dad ad a da da da dad ad a da da d aa  ad ad ada a ada  </p>
+                        <h2>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h2>
+                        <p>Хамас зэвсэгт байгууллага бямба гарагийн өглөө Газын зурвасаас Израилийн нутагт дэвсгэр рүү гэнэт довтоллоо. Агаар, газар,  </p>
                         <div class="mqlist">
                             <img src="comment-light.bd31b019.svg">
                             <p style="padding-left: 5px;">12</p>
