--- a/medee.html
+++ b/medee.html
@@ -109,21 +109,22 @@
             </a>
         </ul>
     </header>
-    <article>
+    <article style="margin-left: 20px;">
         <div class="pro">
             <img src="pro.jpeg">
             <p style="padding-left: 5px; color: #ffffffb4;">Номин</p>
             <img src="time-gray.9098dcef.svg" style="padding-left: 10px; ">
             <p style="padding-left: 5px; color: #ffffffb4; width: 100px;">10 минутын өмнө</p>
-            
+            <img src="facebook.483468e9.svg" style="padding-left: 750px;">
+            <img src="twitter.b8e7ff8d.svg">
         </div>
         <header>
             <h1>Хамас бүлэглэл Израиль руу довтолсноос 300 гаруй хүн амиа алдаж, 1800 гаруй хүн шархаджээ</h1>
         </header>
         <img src="md1.jpg" style="width: 800px;">
         <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>
-        <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>
-        <p>Монгол Улсын Ерөнхий сайд Л.Оюун-Эрдэнэ Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар Х.Нямбаатарыг батламжилж, тамгыг нь гардууллаа. </p>        
+        <p>Тэрбээр "Монгол Улсын Үндсэн хуульд заасан бүрэн эрхийнхээ хүрээнд Х.Нямбаатарыг Нийслэлийн Засаг дарга бөгөөд Улаанбаатар хотын захирагчаар томилж байна. 30 гаруй жилийн хугацаанд хуримтлагдсан, бугшсан авлигын асуудалд анхаарч ажиллана хэмээн найдаж байна. </p>
+        <p>Мөн намрын чуулган өндөрлөхөөс өмнө "Алсын хараа-2050", "Шинэ сэргэлтийн бодлого"-ын хүрээнд урт, дунд, богино хугацааны реформын төлөвлөлтийг хийж УИХ, Засгийн газраар яаралтай батлуулах үүрэг даалгавар өгч байна" гэсэн юм. </p>        
         <footer>
             <ul>
                 <li >
