--- a/jstur1.html
+++ b/jstur1.html
@@ -2,50 +2,113 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML to JSON</title>
+    <title>JSON to HTML</title>
 </head>
 <body>
+    <div id="content-container"></div>
+
     <script>
-        function htmlToJson() {
-            const articleElement = document.querySelector('article');
+        document.addEventListener('DOMContentLoaded', function () {
+            // Fetch JSON data
+            fetch('your-api-endpoint') // Replace with your actual API endpoint
+                .then(response => response.json())
+                .then(data => renderHTML(data))
+                .catch(error => console.error('Error fetching data:', error));
 
-            // Create a JSON structure
-            const jsonStructure = {
-                article: {
-                    profile: {
-                        image: articleElement.querySelector('.pro img').src,
-                        author: articleElement.querySelector('.pro p').textContent.trim(),
-                        timestamp: articleElement.querySelector('.pro p:nth-child(3)').textContent.trim(),
-                        socialMedia: {
-                            facebook: true,  // You can customize this based on actual data
-                            twitter: true    // You can customize this based on actual data
-                        }
-                    },
-                    header: {
-                        title: articleElement.querySelector('header h1').textContent.trim()
-                    },
-                    image: articleElement.querySelector('img').src,
-                    content: Array.from(articleElement.querySelectorAll('p')).map(p => p.textContent.trim()),
-                    footer: {
-                        reactions: {
-                            like: parseInt(articleElement.querySelector('footer li:nth-child(1) p').textContent),
-                            dislike: parseInt(articleElement.querySelector('footer li:nth-child(2) p').textContent),
-                            love: parseInt(articleElement.querySelector('footer li:nth-child(3) p').textContent)
-                        }
-                    }
-                }
-            };
+            // Render HTML content
+            function renderHTML(data) {
+                const contentContainer = document.getElementById('content-container');
+                const header = data.header;
+                const article = data.article;
+                const section = data.section;
 
-            // Convert the JSON structure to a string
-            const jsonString = JSON.stringify(jsonStructure, null, 2);
+                // Render header
+                const headerHTML = `
+                    <header>
+                        <a href="index.html">
+                            <img src="${header.logoSrc}">
+                        </a>
+                        <ul>
+                            ${header.menuItems.map(item => `
+                                <li>
+                                    <p>${item.label}</p>
+                                    <a href="${item.link}">
+                                        <img src="${item.iconSrc}">
+                                    </a>
+                                    <p>${item.count || item.date}</p>
+                                </li>
+                            `).join('')}
+                            <a>
+                                <img src="${header.burgerMenuSrc}">
+                            </a>
+                        </ul>
+                    </header>
+                `;
 
-            // Log the resulting JSON string
-            console.log(jsonString);
-        }
+                // Render article
+                const authorHTML = `
+                    <div class="pro">
+                        <img src="${article.author.imageSrc}">
+                        <p style="padding-left: 5px; color: #ffffffb4;">${article.author.name}</p>
+                        <img src="time-gray.9098dcef.svg" style="padding-left: 10px; ">
+                        <p style="padding-left: 5px; color: #ffffffb4; width: 100px;">${article.author.timeAgo}</p>
+                        ${article.author.socialIcons.map(icon => `<img src="${icon.src}">`).join('')}
+                    </div>
+                `;
 
-        // Call the function when the page is loaded
-        window.onload = htmlToJson;
+                const reactionsHTML = `
+                    <footer>
+                        <ul>
+                            ${Object.entries(article.reactions).map(([key, value]) => `
+                                <li>
+                                    <a>
+                                        <img src="${value.src}">
+                                    </a>
+                                    <p>${value.count}</p>
+                                </li>
+                            `).join('')}
+                        </ul>
+                    </footer>
+                `;
+
+                const articleHTML = `
+                    <article style="margin-left: 20px;">
+                        ${authorHTML}
+                        <header>
+                            <h1>${article.title}</h1>
+                        </header>
+                        <img src="${article.imageSrc}" style="width: 800px;">
+                        ${article.content.map(paragraph => `<p>${paragraph}</p>`).join('')}
+                        ${reactionsHTML}
+                    </article>
+                `;
+
+                // Render section
+                const sectionHTML = `
+                    <section>
+                        <header>
+                            <h2>Бусад мэдээ</h2>
+                        </header>
+                        <ul>
+                            ${section.news.map(newsItem => `
+                                <li>
+                                    <a href="${newsItem.link}">
+                                        <img src="${newsItem.imageSrc}">
+                                        <h3>${newsItem.title}</h3>
+                                    </a>
+                                </li>
+                            `).join('')}
+                        </ul>
+                    </section>
+                `;
+
+                // Combine everything and render
+                const fullHTML = headerHTML + articleHTML + sectionHTML;
+                contentContainer.innerHTML = fullHTML;
+            }
+        });
     </script>
 </body>
 </html>
